Fix emoji being squished on mobile

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -22,6 +22,7 @@
 
 			img {
 				height: 1em;
+				width: 1em;
 				aspect-ratio: 1;
 				display: inline;
 				position: relative;
